--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,11 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <img src="{{photo}}" alt="{{name}}">
-    <h1>I'm {{name}}</h1>
+    <img src="{{photo}}" alt="{{name}}"> <!-- photo is a variable passed from the view -->
+    <h1>I'm {{name|title}}</h1> {% comment %} title filter capitalizes the first letter of each word {% endcomment %}
     <p>{{bio}}</p>
-    {% for item in social %}
+    {% for item in social %} 
     <a href="{{item.url}}">{{item.name}}: {{item.username}}</a>
     {% endfor %}
+
 {% endblock %}
