--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     width: 80%;
+    justify-items: center;
 }
 
 img {
@@ -77,3 +78,214 @@ footer {
     text-align: center;
     border-top: 1px solid #eaeaea;
 }
+
+
+
+/* My Details Css */
+
+.profile_photo {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.my_details {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.my_details h1 {
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+
+.my_details p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
+
+.my_details a {
+    text-decoration: none;
+    color: #333;
+    background-color: #eaeaea;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.my_details a:hover {
+    background-color: #333;
+    color: white;
+}
+
+.my_details * {
+    padding: 20px;
+}
+
+
+/* Blog Listing Css */
+
+.blog_listing {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.blog_listing h1 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.blog_listing .blog_list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-self: stretch;
+}
+
+.blog_listing .blog_item {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    padding: 20px;
+    width: 80%;
+}
+
+.blog_listing .blog_item h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.blog_listing .blog_item h2 a {
+    text-decoration: none;
+    color: #333;
+    padding: 10px 0;
+    transition: background-color 0.3s ease;
+}
+
+.blog_listing .blog_item h2 a:hover {
+    color: darkolivegreen;
+}
+
+.blog_listing .blog_item p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
+
+
+
+/* Blog Post Css */
+
+
+/* Blog Detail */
+.blog_detail {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.blog_detail h1 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.blog_detail p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
+
+
+/* Contact Css */
+
+.contact {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: row;
+    padding: 40px 0;
+}
+
+
+.contact_form {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    flex: 1;
+}
+
+
+.contact_form form {
+    width: 80%;
+}
+
+.contact_form .form-group {
+    margin-bottom: 20px;
+}
+
+.contact_form label {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.contact_form input,
+.contact_form textarea {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 1em;
+}
+
+.contact_form button {
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.2em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.contact_form button:hover {
+    background-color: darkolivegreen;
+}
+
+
+.contact_details {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    flex: 1;
+}
+
+.contact_details h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+.contact_details p {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
+
+.contact_details a {
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.3s ease;
+}
+
+.contact_details a:hover {
+    color: darkolivegreen;
+}
+
+/* Media Queries */
