--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>{% block title %}About Me{% endblock title %}</title>
+    <title>About Me</title>
 </head>
 
 <body>
@@ -17,16 +16,17 @@
             <h1 class="top-logo">Aadarsha Dhakal</h1>
             <nav class="menu">
                 <ul class="menu-list">
-                    <li class="menu-item"><a href="{% url 'index' %}">Home</a></li>
+                    <li class="menu-item"><a href="/">Home</a></li>
+                    <li class="menu-item"><a href="blog.html">Blog</a></li>
+                    <li class="menu-item"><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <section>
-        <div class="container">
-            {% block content %}{% endblock content %}
-        </div>
-    </section>
+
+    {% block content %}
+    {% endblock content %}
+
     <footer>
         <div class="container">
             <p>&copy; 2025 - Aadarsha Dhakal</p>
