--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>About Me</title>
+    <title>Aadarsha Dhakal</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 <ul class="menu-list">
                     <li class="menu-item"><a href="/">Home</a></li>
                     <li class="menu-item"><a href="blog.html">Blog</a></li>
-                    <li class="menu-item"><a href="contact.html">Contact</a></li>
+                    <li class="menu-item"><a href="{% url 'contact' %}">Contact</a></li>
                 </ul>
             </nav>
         </div>
