--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
                 <ul class="menu-list">
                     <li class="menu-item"><a href="/">Home</a></li>
                     <li class="menu-item"><a href="blog.html">Blog</a></li>
-                    <li class="menu-item"><a href="contact.html">Contact</a></li>
+                    <li class="menu-item"><a href="{% url "contact" %}">Contact</a></li>
                 </ul>
             </nav>
         </div>
