--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             <nav class="menu">
                 <ul class="menu-list">
                     <li class="menu-item"><a href="/">Home</a></li>
-                    <li class="menu-item"><a href="blog.html">Blog</a></li>
+                    <li class="menu-item"><a href="{% url "blogs" %}">Blog</a></li>
                     <li class="menu-item"><a href="{% url "contact" %}">Contact</a></li>
                 </ul>
             </nav>
