--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,14 +7,14 @@
     <div class="container blog_listing">
         <h1>Blogs</h1>
         <div class="blog_list">
+            {% for item in blogs %}
             <div class="blog_item">
-                <h2><a href="blog_detail.html">Blog Title 1</a></h2>
-                <p>Short description of the blog post goes here.</p>
+                <h2><a href="{% url "blog_detail" blog_id=item.pk %}">{{item.title}}</a></h2>
+                <p>{{item.description}}</p>
             </div>
-            <div class="blog_item">
-                <h2><a href="blog_detail.html">Blog Title 2</a></h2>
-                <p>Short description of the blog post goes here.</p>
-            </div>
+            {% endfor %}
+            
+           
         </div>
     </div>
 </section>
