--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,21 +5,17 @@
 
     <div class="container contact">
         <div class="contact_form">
-            <form action="/submit-contact" method="POST">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-                </div>
+            {% if success %}
+            <h2>Thank you for your message!</h2>
+            <p>We will get back to you as soon as possible.</p>
+            {% else %}
+            <form action="{% url "contact" %} " method="POST">
+                {% csrf_token %}
+                {{form.as_p}}
                 <button type="submit">Send Message</button>
             </form>
+            {% endif %}
+            
         </div>
         <div class="contact_details">
             <h2>Contact Details</h2>
